--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="cointainer">
         <div class="navbar--section__one">
             <div class="navbar--s1">
-                <img src="./images/Tripadvisor_lockup_horizontal_secondary_registered.svg">
+                <img src="./images/fab482d-Tripadvisor_lockup_horizontal_secondary_registered.svg">
             </div>
             <div class="navbar--s2">
 
@@ -76,15 +76,156 @@
         </div>
         <div class="section2">
             <div class="sec_img">
-                <img src="./images/sean-oulashin-KMn4VEeEPR8-unsplash.jpg">
+                <img src="./images/background.jpg">
             </div>
             <div class="sec_cont">
                 <h1>Book the best part of your trip</h1><br>
-                <p> Browse unforgettable things to do—right here.</p>
-                <button>Find things to do</button>
+                <p> Your trusted companion for discovering the best destinations,hotels,restaurants and
+                    travel experiences around the world.
+                </p>
+                <button class="find">Find things to do</button>
             </div>
         </div>
-    </div>
-</body>
+        <!-- interest -->
+        <section class="interest">
+            <h2>Find things to do by interest</h2>
+            <p>Whatever you're into, we’ve got it</p>
+            <div class="int-details">
+                <div class="int-1">
+                    <h1>Outdoors</h1>
+                </div>
 
+                <div class="int-2">
+                    <h1>Food</h1>
+                </div>
+
+                <div class="int-3">
+                    <h1>Culture</h1>
+                </div>
+
+                <div class="int-4">
+                    <h1>Water</h1>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- near madras -->
+        <section class="madras interest">
+            <h2>Explore experiences near Chennai (Madras)</h2>
+            <p>Can't-miss picks near you</p>
+
+            <div class="chennai">
+                <div class="chennai-1">
+                    <img src="./images/mahabalipuram.jpg" alt="">
+                    <h3>Mahabalipuram tour by Tourism Ministry approved company</h3>
+                </div>
+
+                <div class="chennai-1">
+                    <img src="./images/marina beach.jfif" alt="">
+                    <h3>Private 6 days Exotic Tamilnadu Tour from Chennai</h3>
+                </div>
+
+                <div class="chennai-1">
+                    <img src="./images/pondicherry.jfif" alt="">
+                    <h3>Auroville and Pondicherry Tour from Chennai</h3>
+                </div>
+
+                <div class="chennai-1">
+                    <img src="./images/wildimg.jpg" alt="">
+                    <h3>Wild life tour in Chennai with guide and private car</h3>
+                </div>
+            </div>
+        </section>
+
+        <section class="banner">
+            <img src="./images/world travel img.jfif" alt="banner" class="trip-img">
+
+            <div class="trip-cnt">
+                <h1 class="b-title">The world's best things to do</h1>
+                <p class="b-para">Make it a trip to remember with 2025's Travellers' Choice Awards Best of the Best..
+                </p>
+                <button class="b-btn">Reveal the Winners</button>
+            </div>
+
+        </section>
+
+        <section class="inspire">
+            <h2>Inspiration to get you going</h2>
+            <div class="in-box">
+                <div class="in-1">
+                    <img src="./images/family-travel.jpg" alt="">
+                    <h3>The Ultimate family travel guide.</h3>
+                </div>
+
+                <div class="in-1">
+                    <img src="./images/dubai.jpg" alt="">
+                    <h3>Where to stargaze around the world, from Utah to Dubai.</h3>
+                </div>
+
+                <div class="in-1">
+                    <img src="./images/paris art.jpg" alt="">
+                    <h3>Load up on art in Paris, NYC, and other culture hot spots.</h3>
+                </div>
+            </div>
+        </section>
+        <div class="spons">
+            <div class="img">
+                <img src="./images/trip img.jfif">
+            </div>
+            <div class="notes">
+                <h2>Sponsored by Wanderlab</h2>
+                <h1>Watch the Wanderer</h1>
+                <p>Tripadvisor's award-winning<br>travel series,now streaming<br>
+                    on Amazon Prime Video</p>
+                <button>Learn More</button>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="about">
+                <h2>About Tripadvisor</h2>
+                <ul>
+                    <li>About Us</li>
+                    <li>Press</li>
+                    <li>Careers</li>
+                    <li>Trust & Safety</li>
+                    <li>Contact Us</li>
+                </ul>
+
+            </div>
+            <div class="explore">
+                <h2>Explore</h2>
+                <ul>
+                    <li>Write a Review</li>
+                    <li>Add a Place</li>
+                    <li>Join</li>
+                    <li>Travellers Choice</li>
+                    <li>Help Centre</li>
+                    <li>Travel Stories</li>
+                </ul>
+
+
+            </div>
+            <div class="business">
+                <h2>Do Business With US</h2>
+                <ul>
+                    <li>Owners & DMO/CVB</li>
+                   <li>Access Our Content API</li>
+                    <li>Sponsored Placements</li>
+                    
+                </ul>
+
+            </div>
+             <div class="sites">
+                <h2>Tripadvisor Sites</h2>
+                <ul>
+                    <li>Book tours and attraction tickets on viator</li>
+                    <li>&copy; 2025 Tripadvisor LLC All Rights Reserved.</li>
+                    
+                </ul>
+
+            </div>
+        </div>
+
+</body>
 </html>
